# mewzeek

./: .env  Cargo.toml  README.md  build.sh
migrations/: 20231020100208_init.up.sql
migrations/2023-10-21-211453_create_users/: up.sql
src/: handler.rs  helpers.rs  jwt_auth.rs  main.rs  model.rs  response.rs  schema.rs
