[package]
name = "mewzeek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "9.0.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
diesel = { version = "2.1.0", features = ["chrono", "postgres", "r2d2", "uuid"] }

